# hackathon-project

track2_backend - Copy/: README.md  pyproject.toml
track2_backend - Copy/src/national_agentic_ai_hackathon_2025_backend/: _debug.py  catastrophic.csv  config.py  main.py  text.py
track2_backend - Copy/src/national_agentic_ai_hackathon_2025_backend/bot/: web_bot.py  whatsapp_bot.py
track2_backend - Copy/src/national_agentic_ai_hackathon_2025_backend/context/: chat_history.py  coordinates.py  global_context.py  user.py
track2_backend - Copy/src/national_agentic_ai_hackathon_2025_backend/database/: base.py  booking.py  catastrophic.py  chat_history.py  hospital.py  police.py  user.py
track2_backend - Copy/src/national_agentic_ai_hackathon_2025_backend/docs/: BOOKING_SYSTEM.md  CHAT_RESPONSE_FORMAT.md  EMAIL_TOOL.md
track2_backend - Copy/src/national_agentic_ai_hackathon_2025_backend/handlers/: vector_store.py  whatsapp.py  workflow.py
track2_backend - Copy/src/national_agentic_ai_hackathon_2025_backend/routes/: chat.py
track2_backend - Copy/src/national_agentic_ai_hackathon_2025_backend/schemas/: booking.py  catastrophic.py  chat_history.py  hospitals.py  police.py  user.py
track2_backend - Copy/src/national_agentic_ai_hackathon_2025_backend/scripts/: add_facilities.py  example_booking_with_email.py  police_facilities.py  test_booking.py  test_chat_fix.py  test_email_tool.py
track2_backend - Copy/src/national_agentic_ai_hackathon_2025_backend/utils/: _helpers.py  app_instance.py  email_sender.py  wa_instance.py  whatsapp_essentials.py
(+62 files in other folders)
